--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Reqres API Interaction</h1>
-    <div id="user-container">
-        <!-- User data will be displayed here -->
-    </div>
-    <script src="js/script.js"></script>
+    <h1>Reqres User Management</h1>
+    
+    <!-- User Creation Form -->
+    <section id="create-user">
+        <h2>Create New User</h2>
+        <form id="create-user-form">
+            <label for="first-name">First Name:</label>
+            <input type="text" id="first-name" name="first-name" required>
+            <label for="last-name">Last Name:</label>
+            <input type="text" id="last-name" name="last-name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <button type="submit">Create User</button>
+        </form>
+        <div id="create-user-response"></div>
+    </section>
+
+    <!-- User List -->
+    <section id="user-list">
+        <h2>Users</h2>
+        <div id="user-container"></div> <!-- Container for displaying users -->
+    </section>
+
+    <script src="js/script.js" defer></script>
+
 </body>
 </html>
+
+
+
