Update Reqres Project: Implemented user creation, display, and profile viewing. Added placeholders for update functionality.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         <div id="user-container"></div> <!-- Container for displaying users -->
     </section>
 
-    <script src="js/script.js" defer></script>
+    <!-- User Profile -->
+    <section id="user-profile">
+        <h2>User Profile</h2>
+        <div id="profile-container"></div> <!-- Container for displaying user profile details -->
+    </section>
 
+    <script src="js/script.js" defer></script>
 </body>
 </html>
